--- a/Week4/distance_testing.ipynb
+++ b/Week4/distance_testing.ipynb
@@ -417,20 +417,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.828427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>319</th>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
@@ -486,31 +472,45 @@
        "      <td>1</td>\n",
        "      <td>4.582576</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.795832</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     Clump Thickness  Uniformity of Cell Size  Uniformity of Cell Shape  \\\n",
-       "173                5                        3                         3   \n",
        "319                5                        4                         6   \n",
        "303                5                        5                         5   \n",
        "151                5                        5                         5   \n",
        "142                3                        4                         5   \n",
+       "109                8                        6                         4   \n",
        "\n",
        "     Marginal Adhesion  Single Epithelial Cell Size  Bare Nuclei  \\\n",
-       "173                  3                            6           10   \n",
        "319                  6                            4           10   \n",
        "303                  2                            5           10   \n",
        "151                  6                            3           10   \n",
        "142                  2                            6            8   \n",
+       "109                  3                            5            9   \n",
        "\n",
        "     Bland Chromatin  Normal Nucleoli  Mitoses  Class  Distance  \n",
-       "173                3                1        1      1  2.828427  \n",
        "319                4                3        1      1  4.000000  \n",
        "303                4                3        1      1  4.123106  \n",
        "151                3                1        1      1  4.472136  \n",
-       "142                4                1        1      1  4.582576  "
+       "142                4                1        1      1  4.582576  \n",
+       "109                3                1        1      1  4.795832  "
       ]
      },
      "execution_count": 11,
@@ -627,13 +627,13 @@
     {
      "data": {
       "text/plain": [
-       "Int64Index([  1,   4,   9,  11,  28,  30,  32,  34,  35,  36,  38,  50,  67,\n",
-       "             87,  92,  97, 126, 146, 147, 150, 157, 162, 170, 177, 200, 205,\n",
-       "            224, 230, 232, 248, 257, 270, 281, 282, 287, 291, 292, 309, 313,\n",
-       "            326, 327, 346, 347, 352, 361, 363, 365, 380, 381, 386, 424, 434,\n",
-       "            437, 446, 449, 456, 460, 466, 471, 477, 478, 479, 481, 510, 516,\n",
-       "            523, 542, 552, 557, 590, 599, 608, 611, 621, 627, 632, 633, 638,\n",
-       "            640, 645, 663, 670, 679],\n",
+       "Int64Index([  1,   3,  23,  53,  55,  58,  90, 103, 126, 132, 140, 144, 148,\n",
+       "            153, 166, 170, 173, 175, 183, 184, 197, 199, 213, 220, 221, 223,\n",
+       "            231, 236, 254, 262, 275, 279, 280, 285, 286, 287, 290, 292, 308,\n",
+       "            313, 317, 325, 327, 328, 329, 341, 351, 353, 356, 357, 360, 365,\n",
+       "            371, 376, 395, 396, 419, 422, 428, 442, 472, 478, 491, 492, 493,\n",
+       "            504, 513, 515, 520, 533, 558, 569, 581, 586, 594, 607, 614, 633,\n",
+       "            636, 651, 657, 658, 672],\n",
        "           dtype='int64')"
       ]
      },
@@ -782,20 +782,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.828427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>319</th>\n",
        "      <td>5</td>\n",
        "      <td>4</td>\n",
@@ -851,31 +837,45 @@
        "      <td>1</td>\n",
        "      <td>4.582576</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.795832</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     Clump Thickness  Uniformity of Cell Size  Uniformity of Cell Shape  \\\n",
-       "173                5                        3                         3   \n",
        "319                5                        4                         6   \n",
        "303                5                        5                         5   \n",
        "151                5                        5                         5   \n",
        "142                3                        4                         5   \n",
+       "109                8                        6                         4   \n",
        "\n",
        "     Marginal Adhesion  Single Epithelial Cell Size  Bare Nuclei  \\\n",
-       "173                  3                            6           10   \n",
        "319                  6                            4           10   \n",
        "303                  2                            5           10   \n",
        "151                  6                            3           10   \n",
        "142                  2                            6            8   \n",
+       "109                  3                            5            9   \n",
        "\n",
        "     Bland Chromatin  Normal Nucleoli  Mitoses  Class  Distance  \n",
-       "173                3                1        1      1  2.828427  \n",
        "319                4                3        1      1  4.000000  \n",
        "303                4                3        1      1  4.123106  \n",
        "151                3                1        1      1  4.472136  \n",
-       "142                4                1        1      1  4.582576  "
+       "142                4                1        1      1  4.582576  \n",
+       "109                3                1        1      1  4.795832  "
       ]
      },
      "execution_count": 19,
@@ -915,13 +915,13 @@
     {
      "data": {
       "text/plain": [
-       "Int64Index([  1,   4,   9,  11,  28,  30,  32,  34,  35,  36,  38,  50,  67,\n",
-       "             87,  92,  97, 126, 146, 147, 150, 157, 162, 170, 177, 200, 205,\n",
-       "            224, 230, 232, 248, 257, 270, 281, 282, 287, 291, 292, 309, 313,\n",
-       "            326, 327, 346, 347, 352, 361, 363, 365, 380, 381, 386, 424, 434,\n",
-       "            437, 446, 449, 456, 460, 466, 471, 477, 478, 479, 481, 510, 516,\n",
-       "            523, 542, 552, 557, 590, 599, 608, 611, 621, 627, 632, 633, 638,\n",
-       "            640, 645, 663, 670, 679],\n",
+       "Int64Index([  1,   3,  23,  53,  55,  58,  90, 103, 126, 132, 140, 144, 148,\n",
+       "            153, 166, 170, 173, 175, 183, 184, 197, 199, 213, 220, 221, 223,\n",
+       "            231, 236, 254, 262, 275, 279, 280, 285, 286, 287, 290, 292, 308,\n",
+       "            313, 317, 325, 327, 328, 329, 341, 351, 353, 356, 357, 360, 365,\n",
+       "            371, 376, 395, 396, 419, 422, 428, 442, 472, 478, 491, 492, 493,\n",
+       "            504, 513, 515, 520, 533, 558, 569, 581, 586, 594, 607, 614, 633,\n",
+       "            636, 651, 657, 658, 672],\n",
        "           dtype='int64')"
       ]
      },
@@ -1079,15 +1079,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0.9393939393939394\n",
+      "1 0.9696969696969697\n",
       "2 0.9090909090909091\n",
-      "3 0.9393939393939394\n",
-      "4 0.9393939393939394\n",
-      "5 0.9696969696969697\n",
-      "6 0.9393939393939394\n",
-      "7 0.9393939393939394\n",
-      "8 0.9393939393939394\n",
-      "9 0.9696969696969697\n"
+      "3 0.9090909090909091\n",
+      "4 0.9090909090909091\n",
+      "5 0.9090909090909091\n",
+      "6 0.9090909090909091\n",
+      "7 0.9090909090909091\n",
+      "8 0.9090909090909091\n",
+      "9 0.9090909090909091\n"
      ]
     }
    ],
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
        "[3380 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,6 +1998,34 @@
     "testing_points = pd.DataFrame({'Hemoglobin': x_column, 'Glocose': y_column, 'Class': \"\", 'Distance': \"\"})\n",
     "testing_points"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'testing_po' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-b91432d67ab1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtesting_po\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'testing_po' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "testing_po"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2072,7 +2100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
